--- a/app/Tpl/main/fanwe/turntable.html
+++ b/app/Tpl/main/fanwe/turntable.html
@@ -26,6 +26,7 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/dc/js/page_js/slider.js";
 $this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/dc/js/page_js/slider.js";
 
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/styletrun.css";
+$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery-1.11.0.min.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/awardRotate.js";
 
 
