--- a/wap/Tpl/main/turntable.html
+++ b/wap/Tpl/main/turntable.html
@@ -1,20 +1,16 @@
-{if $ajax_refresh==0}
 <?php
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/weebox.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/fanweUI.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/style.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/color.css";
+$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/article.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/public.css";
-$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/duobaos.css";
-$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/pull_refresh.css";
 
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery-1.6.2.min.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery.bgiframe.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery.timer.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery.weebox.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery.touchwipe.js";
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/fastclick.js";
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/TouchSlide.1.1.js";
 
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/fanwe_utils/fanweUI.js";
 $this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/js/fanwe_utils/fanweUI.js";
@@ -22,84 +18,228 @@ $this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/js/fanwe_utils/fanweUI.js"
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/script.js";
 $this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/js/script.js";
 
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/onload.js";
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/swipe.js";
-
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/duoobao_item_num.js";
-$this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/js/duoobao_item_num.js";
-
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/pull_refresh/lib/touche.js";
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/pull_refresh/pull-refresh.js";
-$this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/js/pull_refresh/pull-refresh.js";
-
 ?>
-
 {include file="inc/header_title_home.html"}
-
-<script type="text/javascript">
-    //减少移动端触发"Click"事件时300毫秒的时间差
-    window.addEventListener('load', function() {
-        FastClick.attach(document.body);
-    }, false);
-</script>
-
-{/if}
-
-<div class="wrap  loading_container" id="loading_container">
+<div class="wrap">
     <div class="content">
-        {if $list}
-        <ul class="goods-list scroll_bottom_list">
-
-            {foreach from=$list item=item}
-            <li>
-                <!--<a href="{url x="index" r="duobao" p="data_id=$item.id"}">-->
-                <div>
-
-                    <div class="imgbox">
-                        <a href="{url x="index" r="duobao" p="data_id=$item.id"}">
-                        <img src="{$item.icon}" alt="">
-                        </a>
-                        {if $item.min_buy==10 or $item.unit_price==10}
-                        <div class="tenyen"></div>
-                        {/if}
-                        {if $item.unit_price eq 100}
-                        <div class="hundredyen"></div>
-                        {/if}
-                    </div>
-
-                    <div class="info">
-                        <a href="{url x="index" r="duobao" p="data_id=$item.id"}">
-                        <header>{if $item.is_topspeed}
-                            <em style="background-color:#ff2300;padding: 3px 5px;color: #fff;font-size: 12px;">极速</em>
-                            {/if}{$item.name}</header>
-                        <progress max="{$item.max_buy}" value="{$item.current_buy}"></progress>
-                        <p class="fl">总需<span class="all">{$item.max_buy}</span></p>
-                        <p class="fr">剩余<span class="rest">{$item.surplus_buy}</span></p>
-                        </a>
-                    </div>
-
-                    <a class="right-box add_cart_item" buy_num="{$item.min_buy}" data-id="{$item.id}">参与</a>
+        <div class="container">
+            <img src="images/1.png" id="shan-img" style="display:none;" />
+            <img src="images/2.png" id="sorry-img" style="display:none;" />
+            <div class="banner">
+                <div class="turnplate" style="background-image:url(images/turnplate-bg.png);background-size:100% 100%;">
+                    <canvas class="item" id="wheelcanvas" width="422px" height="422px"></canvas>
+                    <img class="pointer" src="images/turnplate-pointer.png"/>
                 </div>
-
-            </li>
-            {/foreach}
-        </ul>
-        {if $pages}
-        <div class="fy scroll_bottom_page">
-            {$pages}
+            </div>
         </div>
-        {/if}
-        {else}
-        <!-- 无数据↓ -->
-        <div class="null_data">
-            <p class="icon"><i class="iconfont">&#xe6e8;</i></p>
-            <p class="message">暂无数据</p>
+        <div class="col-md-4">
+            <div class="g_3">
+                <div class="g_3_tit"><span class="g_3_txt">游戏介绍</span></div>
+                <div class="g_3_cet1">视觉中国事件目前持续发酵中。起因于4月11日，视觉中国网站发布了人类历史上首张黑洞照片，版权所有一栏，写的是视觉中国。此事引发巨大争议。昨日下午，视觉中国将使用说明改为「不得用于商业用途」，并把版权所有改为「欧洲南方天文台」。百度、凤凰网等公司官方微博发文称，自己的商标被视觉中国收录并打上水印。共青团中央微博发文称，国旗、国徽的图片也在视觉中国网站上售卖。视觉中国道歉</div>
+            </div>
+            <div class="g_3">
+                <div class="g_3_tit"><span class="g_3_txt">游戏规则</span></div>
+                <div class="g_3_cet1"> 视觉中国事件目前持续发酵中。起因于4月11日，视觉中国网站发布了人类历史上首张黑洞照片，版权所有一栏，写的是视觉中国。此事引发巨大争议。昨日下午，视觉中国将使用说明改为「不得用于商业用途」，并把版权所有改为「欧洲南方天文台」。百度、凤凰网等公司官方微博发文称，自己的商标被视觉中国收录并打上水印。共青团中央微博发文称，国旗、国徽的图片也在视觉中国网站上售卖。视觉中国道歉</div>
+            </div>
+            <div class="g_3">
+                <div class="g_3_tit"><span class="g_3_txt">奖励设置</span></div>
+                <div class="g_3_cet">
+                    <table>
+                        <tr>
+                            <td width="30%">奖级</td>
+                            <td width="70%">中奖金额</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>250,000元</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>10,000元</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>1,000元</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>500元</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>200元</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>100元</td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>50元</td>
+                        </tr>
+                        <tr>
+                            <td>8</td>
+                            <td>20元</td>
+                        </tr>
+                        <tr>
+                            <td>9</td>
+                            <td>10元</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </div>
-        {/if}
     </div>
 </div>
 
-{if $ajax_refresh==0}
-{include file="inc/footer_menu.html"}
-{include file="inc/add_to_list.html"}
-{/if}
+<script>
+    var turnplate={
+        restaraunts:[],       //大转盘奖品名称
+        colors:[],          //大转盘奖品区块对应背景颜色
+        outsideRadius:192,      //大转盘外圆的半径
+        textRadius:155,       //大转盘奖品位置距离圆心的距离
+        insideRadius:73,      //大转盘内圆的半径
+        startAngle:0,       //开始角度
+
+        bRotate:false       //false:停止;ture:旋转
+    };
+
+    $(document).ready(function(){
+        //动态添加大转盘的奖品与奖品区域背景颜色
+        turnplate.restaraunts = ["50M免费流量包", "10金币", "谢谢参与", "5金币", "10M免费流量包", "20M免费流量包", "20金币 ", "30M免费流量包", "100M免费流量包", "2金币"];
+        turnplate.colors = ["#FFF4D6", "#FFFFFF", "#FFF4D6", "#FFFFFF","#FFF4D6", "#FFFFFF", "#FFF4D6", "#FFFFFF","#FFF4D6", "#FFFFFF"];
+
+
+        var rotateTimeOut = function (){
+            $('#wheelcanvas').rotate({
+                angle:0,
+                animateTo:2160,
+                duration:8000,
+                callback:function (){
+                    alert('网络超时，请检查您的网络设置！');
+                }
+            });
+        };
+
+        //旋转转盘 item:奖品位置; txt：提示语;
+        var rotateFn = function (item, txt){
+            var angles = item * (360 / turnplate.restaraunts.length) - (360 / (turnplate.restaraunts.length*2));
+            if(angles<270){
+                angles = 270 - angles;
+            }else{
+                angles = 360 - angles + 270;
+            }
+            $('#wheelcanvas').stopRotate();
+            $('#wheelcanvas').rotate({
+                angle:0,
+                animateTo:angles+1800,
+                duration:8000,
+                callback:function (){
+                    alert(txt);
+                    turnplate.bRotate = !turnplate.bRotate;
+                }
+            });
+        };
+
+        $('.pointer').click(function (){
+            if(turnplate.bRotate)return;
+            turnplate.bRotate = !turnplate.bRotate;
+            //获取随机数(奖品个数范围内)
+            var item = rnd(1,turnplate.restaraunts.length);
+            //奖品数量等于10,指针落在对应奖品区域的中心角度[252, 216, 180, 144, 108, 72, 36, 360, 324, 288]
+            rotateFn(item, turnplate.restaraunts[item-1]);
+        });
+    });
+
+    function rnd(n, m){
+        var random = Math.floor(Math.random()*(m-n+1)+n);
+        return random;
+
+    }
+
+
+    //页面所有元素加载完毕后执行drawRouletteWheel()方法对转盘进行渲染
+    window.onload=function(){
+        drawRouletteWheel();
+    };
+
+    function drawRouletteWheel() {
+        var canvas = document.getElementById("wheelcanvas");
+        if (canvas.getContext) {
+            //根据奖品个数计算圆周角度
+            var arc = Math.PI / (turnplate.restaraunts.length/2);
+            var ctx = canvas.getContext("2d");
+            //在给定矩形内清空一个矩形
+            ctx.clearRect(0,0,422,422);
+            //strokeStyle 属性设置或返回用于笔触的颜色、渐变或模式
+            ctx.strokeStyle = "#FFBE04";
+            //font 属性设置或返回画布上文本内容的当前字体属性
+            ctx.font = '16px Microsoft YaHei';
+            for(var i = 0; i < turnplate.restaraunts.length; i++) {
+                var angle = turnplate.startAngle + i * arc;
+                ctx.fillStyle = turnplate.colors[i];
+                ctx.beginPath();
+                //arc(x,y,r,起始角,结束角,绘制方向) 方法创建弧/曲线（用于创建圆或部分圆）
+                ctx.arc(211, 211, turnplate.outsideRadius, angle, angle + arc, false);
+                ctx.arc(211, 211, turnplate.insideRadius, angle + arc, angle, true);
+                ctx.stroke();
+                ctx.fill();
+                //锁画布(为了保存之前的画布状态)
+                ctx.save();
+
+                //----绘制奖品开始----
+                ctx.fillStyle = "#E5302F";
+                var text = turnplate.restaraunts[i];
+                var line_height = 17;
+                //translate方法重新映射画布上的 (0,0) 位置
+                ctx.translate(211 + Math.cos(angle + arc / 2) * turnplate.textRadius, 211 + Math.sin(angle + arc / 2) * turnplate.textRadius);
+
+                //rotate方法旋转当前的绘图
+                ctx.rotate(angle + arc / 2 + Math.PI / 2);
+
+                /** 下面代码根据奖品类型、奖品名称长度渲染不同效果，如字体、颜色、图片效果。(具体根据实际情况改变) **/
+                if(text.indexOf("M")>0){//流量包
+                    var texts = text.split("M");
+                    for(var j = 0; j<texts.length; j++){
+                        ctx.font = j == 0?'bold 20px Microsoft YaHei':'16px Microsoft YaHei';
+                        if(j == 0){
+                            ctx.fillText(texts[j]+"M", -ctx.measureText(texts[j]+"M").width / 2, j * line_height);
+                        }else{
+                            ctx.fillText(texts[j], -ctx.measureText(texts[j]).width / 2, j * line_height);
+                        }
+                    }
+                }else if(text.indexOf("M") == -1 && text.length>6){//奖品名称长度超过一定范围
+                    text = text.substring(0,6)+"||"+text.substring(6);
+                    var texts = text.split("||");
+                    for(var j = 0; j<texts.length; j++){
+                        ctx.fillText(texts[j], -ctx.measureText(texts[j]).width / 2, j * line_height);
+                    }
+                }else{
+                    //在画布上绘制填色的文本。文本的默认颜色是黑色
+                    //measureText()方法返回包含一个对象，该对象包含以像素计的指定字体宽度
+                    ctx.fillText(text, -ctx.measureText(text).width / 2, 0);
+                }
+
+                //添加对应图标
+                if(text.indexOf("金币")>0){
+                    var img= document.getElementById("shan-img");
+                    img.onload=function(){
+                        ctx.drawImage(img,-15,10);
+                    };
+                    ctx.drawImage(img,-15,10);
+                }else if(text.indexOf("谢谢参与")>=0){
+                    var img= document.getElementById("sorry-img");
+                    img.onload=function(){
+                        ctx.drawImage(img,-15,10);
+                    };
+                    ctx.drawImage(img,-15,10);
+                }
+                //把当前画布返回（调整）到上一个save()状态之前
+                ctx.restore();
+                //----绘制奖品结束----
+            }
+        }
+    }
+</script>
+
+{include file="inc/footer_index.html"}
