--- a/wap/Tpl/main/turntable.html
+++ b/wap/Tpl/main/turntable.html
@@ -246,4 +246,5 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/awardRotate.js";
     }
 </script>
 
+{include file="inc/footer_menu.html"}
 {include file="inc/footer_index.html"}
