--- a/admin/Tpl/default/Turntable/index.html
+++ b/admin/Tpl/default/Turntable/index.html
@@ -7,8 +7,9 @@
 <PHP>
     function get_handle($id, $duobao)
     {
-    $str = "<a href='".u("Duobao/edit",array("id"=>$id))."'>编辑</a>";
+    $str = "<a href='".u("Turntable/edit",array("id"=>$id))."'>编辑</a>";
     $str.="&nbsp;&nbsp;<a href='javascript:foreverdel(".$id.");'>".l("DEL")."</a>";
+    $str.="&nbsp;&nbsp;<a href='".u("Turntable/show",array("id"=>$id))."'>".'详细信息'."</a>";
     return $str;
     }
 
@@ -16,12 +17,32 @@
     $str = "<a href='".u("DuobaoItem/index",array("duobao_id"=>$duobao_id))."'>".$schedule."</a>";
     return $str;
     }
+
+    function type($type)
+    {
+        switch ($type)
+        {
+            case 2:
+            $expression = '钻石' ;
+            break;
+            case 3:
+                $expression = '优惠券' ;
+            break;
+            case 4:
+            $expression = '实物' ;
+            break;
+            default:
+            $expression = '金币' ;
+        }
+        return $expression;
+    }
+
 </php>
 <load href='__TMPL__Common/js/jquery.bgiframe.js' />
 <load href='__TMPL__Common/js/jquery.weebox.js' />
 <load href='__TMPL__Common/style/weebox.css' />
 <div class="main">
-    <div class="main_title">夺宝列表</div>
+    <div class="main_title">大转盘详细信息</div>
     <div class="blank5"></div>
     <form name="search" action="__APP__" method="get">
         <div class="button_row">
@@ -32,27 +53,19 @@
         <div class="search_row">
 
             编号：<input type="text" class="textbox" name="id" value="{:strim($_REQUEST['id'])}" style="width:100px;" />
-            商品名称：<input type="text" class="textbox" name="duobao_name" value="{:strim($_REQUEST['duobao_name'])}" style="width:100px;" />
-            分类名称：<input type="text" class="textbox" name="cate_name" value="{:strim($_REQUEST['cate_name'])}" style="width:100px;" />
-            品牌名称：<input type="text" class="textbox" name="brand_name" value="{:strim($_REQUEST['brand_name'])}" style="width:100px;" />
+            活动名称：<input type="text" class="textbox" name="name" value="{:strim($_REQUEST['name'])}" style="width:100px;" />
+            花费金额：<input type="text" class="textbox" name="expenditure" value="{:strim($_REQUEST['expenditure'])}" style="width:100px;" />
 
-            专区：
-            <select name="classify">
-                <option value="-1" <if condition="intval($_REQUEST['classify']) eq '-1'">selected="selected"</if>>全部</option>
-                <option value="1" <if condition="intval($_REQUEST['classify']) eq 1">selected="selected"</if>>一元</option>
-                <option value="10" <if condition="intval($_REQUEST['classify']) eq 10">selected="selected"</if>>十元</option>
-                <option value="100" <if condition="intval($_REQUEST['classify']) eq 100">selected="selected"</if>>百元</option>
+            消费类型
+            <select name="type">
+                <option value="0" <if condition="intval($_REQUEST['type']) eq 0">selected="selected"</if>>全部</option>
+                <option value="1" <if condition="intval($_REQUEST['type']) eq 1">selected="selected"</if>>金币</option>
+                <option value="2" <if condition="intval($_REQUEST['type']) eq 2">selected="selected"</if>>钻石</option>
+                <option value="3" <if condition="intval($_REQUEST['type']) eq 3">selected="selected"</if>>优惠券</option>
+                <option value="3" <if condition="intval($_REQUEST['type']) eq 4">selected="selected"</if>>实物</option>
             </select>
 
-            特殊专区
-            <select name="special_classify">
-                <option value="-1" <if condition="intval($_REQUEST['special_classify']) eq '-1'">selected="selected"</if>>全部</option>
-                <option value="1" <if condition="intval($_REQUEST['special_classify']) eq 1">selected="selected"</if>>免费购</option>
-                <option value="2" <if condition="intval($_REQUEST['special_classify']) eq 2">selected="selected"</if>>选号</option>
-                <option value="3" <if condition="intval($_REQUEST['special_classify']) eq 3">selected="selected"</if>>PK</option>
-            </select>
-
-            <input type="hidden" value="Duobao" name="m" />
+            <input type="hidden" value="Turntable" name="m" />
             <input type="hidden" value="index" name="a" />
 
             <input type="submit" class="button" value="{%SEARCH}" />
@@ -67,15 +80,10 @@
             action="true"
             datasource="list"
             show="id:{%ID}|50px
-			,duobao_name:商品名称
-			,cate_name:分类名称
-			,brand_name:品牌名称
-			,max_buy:总需人次
-		 	,min_buy:最小投单量
-		 	,max_schedule:最大举办期数
-		 	,current_schedule|get_current_schedule=$duobao['id']:已开期数
-		 	,robot_is_db|get_status:夺宝机器人
-		 	,is_effect|get_toogle_status=$duobao['id']#is_effect:有效"
+			,name:活动名称
+			,expenditure:花费单价
+			,type|type=$duobao['id']:支付类型
+		 	,status|get_status:有效"
             actionlist="id|get_handle=$duobao" />
 
     <div class="blank5"></div>
