--- a/admin/Tpl/default/Turntable/edit.html
+++ b/admin/Tpl/default/Turntable/edit.html
@@ -22,9 +22,9 @@
 				<td class="item_title">扣除类型:</td>
 				<td class="item_input">
 					<select class="require" name="type">
-						<option <if condition="$result['is_total_buy'] eq 1">checked="checked"</if> value="1">金币</option>
-						<option <if condition="$result['is_total_buy'] eq 2">checked="checked"</if>  value="2">钻石</option>
-						<option <if condition="$result['is_total_buy'] eq 3">checked="checked"</if>  value="3">优惠券</option>
+						<option <if condition="$result['type'] eq 1">checked="checked"</if> value="1">金币</option>
+						<option <if condition="$result['type'] eq 2">checked="checked"</if>  value="2">钻石</option>
+						<option <if condition="$result['type'] eq 3">checked="checked"</if>  value="3">优惠券</option>
 					</select>
 					<!-- 新字段，数据库不存在，一元购：min_buy为1，unit_price为1,  十元区：min_buy为10，unit_price为1,  百元区：min_buy为1，unit_price为100 -->
 				</td>
